--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="uk" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
 </head>
@@ -50,9 +50,9 @@
     <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-            <li><img src="images\websitedevelopment.jpg" alt="Розробка сайтів" width="370"></li>
-            <li><img src="images\mobileversionsdevelopment.jpg" alt="Розробка мобільних версій" width="370"></li>
-            <li><img src="images\designdevelopment.jpg" alt="Розробка дизайна" width="370"></li>
+            <li><img src="images/websitedevelopment.jpg" alt="Розробка сайтів" width="370"></li>
+            <li><img src="images/mobileversionsdevelopment.jpg" alt="Розробка мобільних версій" width="370"></li>
+            <li><img src="images/designdevelopment.jpg" alt="Розробка дизайна" width="370"></li>
         </ul>
     </section>
     <section>
