--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     </main>
     </body>
     <footer>
-        <a href="/">WebStudio</a>
+        <a href="/WebStudio">WebStudio</a>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+38 096 111 11 11"> +38 096 111 11 11</a>
+        <a href="tel:+380961111111"> +38 096 111 11 11</a>
     </footer>
     </html>
