--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="tel:+380961111111"> +38 096 111 11 11</a>
         </header>
     <main>
+        <!--Hero section-->
         <section>
             <div>
                 <h1>Ефективні рішення для вашого бізнесу</h1>
@@ -65,11 +66,11 @@
             </ul>
         </section>
     </main>
-    </body>
     <footer>
         <a href="/WebStudio">WebStudio</a>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111"> +38 096 111 11 11</a>
     </footer>
+    </body>
     </html>
