--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="/WebStudio">WebStudio</a></li>
-                    <li><a href="/Студія">Студія</a></li>
-                    <li><a href="/Портфоліо">Портфоліо</a></li>
-                    <li><a href="/Контакти">Контакти</a></li>
+                    <li><a href="#WebStudio">WebStudio</a></li>
+                    <li><a href="#Студія">Студія</a></li>
+                    <li><a href="#Портфоліо">Портфоліо</a></li>
+                    <li><a href="#Контакти">Контакти</a></li>
                 </ul>         
             </nav>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -22,11 +22,11 @@
     <main>
         <!--Hero section-->
         <section>
-                <h1>Ефективні рішення для вашого бізнесу</h1>
+                <h1 id="WebStudio"> Ефективні рішення для вашого бізнесу</h1>
                 <button type="button"> Замовити послугу </button>
         </section>
         <section>
-            <h2>Особливості</h2>
+            <h2 id="Студія">Особливості</h2>
             <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -37,8 +37,8 @@
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                <h3>ПЛАНУВАННЯ</h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3>ПЛАНУВАННЯ</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
                     <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -47,7 +47,7 @@
             </ul>
         </section>
         <section>
-            <h2>Чим ми займаємося</h2>
+            <h2 id="Портфоліо">Чим ми займаємося</h2>
             <ul>
                 <li><img src="images/websitedevelopment.jpg" alt="Розробка сайтів" width="370"></li>
                 <li><img src="images/mobileversionsdevelopment.jpg" alt="Розробка мобільних версій" width="370"></li>
@@ -55,7 +55,7 @@
             </ul>
         </section>
         <section>
-            <h2>Наша команда</h2>
+            <h2 id="Контакти">Наша команда</h2>
             <ul>
                 <li><img src="images/igor.jpg" alt="Ігор Дем'яненко" width=270> <h3>Ігор Дем'яненко</h3><p>Product Designer</p></li>
                 <li><img src="images/olga.jpg" alt="Ольга Рєпіна" width=270><h3>Ольга Рєпіна</h3><p>Frontend Developer</p></li>
@@ -65,10 +65,12 @@
         </section>
     </main>
     <footer>
-        <a href="/WebStudio">WebStudio</a>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111"> +38 096 111 11 11</a>
+        <address>
+            <a href="#WebStudio">WebStudio</a>
+            <p>м. Київ, пр-т Лесі Українки, 26</p>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111"> +38 096 111 11 11</a>
+        </address>
     </footer>
     </body>
     </html>
