--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     </main>
     <footer>
         <address>
-            <a href="#WebStudio">WebStudio</a>
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="#WebStudio">WebStudio</a> <br>
+            м. Київ, пр-т Лесі Українки, 26 <br>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
             <a href="tel:+380961111111"> +38 096 111 11 11</a>
         </address>
     </footer>
