--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <h1 id="WebStudio"> Ефективні рішення для вашого бізнесу</h1>
                 <button type="button"> Замовити послугу </button>
         </section>
+        <!--Студія-->
         <section>
             <h2 id="Студія">Особливості</h2>
             <ul>
@@ -46,6 +47,7 @@
                 </li>
             </ul>
         </section>
+        <!--Портфоліо-->
         <section>
             <h2 id="Портфоліо">Чим ми займаємося</h2>
             <ul>
@@ -54,6 +56,7 @@
                 <li><img src="images/designdevelopment.jpg" alt="Розробка дизайна" width="370"></li>
             </ul>
         </section>
+        <!--Контакти-->
         <section>
             <h2 id="Контакти">Наша команда</h2>
             <ul>
