--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
     <body>
         <header>
             <nav>
+                <!-- Lolgo -->
+                <a href="#WebStudio">WebStudio</a>
                 <ul>
-                    <li><a href="#WebStudio">WebStudio</a></li>
                     <li><a href="#Студія">Студія</a></li>
                     <li><a href="#Портфоліо">Портфоліо</a></li>
                     <li><a href="#Контакти">Контакти</a></li>
                 </ul>         
             </nav>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111"> +38 096 111 11 11</a>
+            <!-- Contacts -->
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+            </ul>
         </header>
     <main>
         <!--Hero section-->
@@ -25,7 +29,7 @@
                 <h1 id="WebStudio"> Ефективні рішення для вашого бізнесу</h1>
                 <button type="button"> Замовити послугу </button>
         </section>
-        <!--Студія-->
+        <!--Studio-->
         <section>
             <h2 id="Студія">Особливості</h2>
             <ul>
@@ -47,7 +51,7 @@
                 </li>
             </ul>
         </section>
-        <!--Портфоліо-->
+        <!--Portfolio-->
         <section>
             <h2 id="Портфоліо">Чим ми займаємося</h2>
             <ul>
@@ -56,7 +60,7 @@
                 <li><img src="images/designdevelopment.jpg" alt="Розробка дизайна" width="370"></li>
             </ul>
         </section>
-        <!--Контакти-->
+        <!--Our team-->
         <section>
             <h2 id="Контакти">Наша команда</h2>
             <ul>
@@ -68,11 +72,16 @@
         </section>
     </main>
     <footer>
+            <!-- Lolgo -->
+            <a href="#WebStudio">WebStudio</a>
+        <!-- Address -->
         <address>
-            <a href="#WebStudio">WebStudio</a> <br>
-            м. Київ, пр-т Лесі Українки, 26 <br>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
-            <a href="tel:+380961111111"> +38 096 111 11 11</a>
+            <ul>
+                <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+            </ul>
+           
         </address>
     </footer>
     </body>
