--- a/index.html
+++ b/index.html
@@ -4,34 +4,38 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/styles.css">
         <title>WebStudio</title>
     </head>
     <body>
-        <header>
+        <header class="header">
             <nav>
-                <!-- Lolgo -->
-                <a href="#WebStudio">WebStudio</a>
+                <!-- Logo -->
+                <a href="./index.html" class="logo"> <span class="logoweb">Web</span><span class="logostudio">Studio</span> </a>
                 <ul>
-                    <li><a href="#Студія">Студія</a></li>
-                    <li><a href="#Портфоліо">Портфоліо</a></li>
-                    <li><a href="#Контакти">Контакти</a></li>
+                    <li><a href="./index.html" class="link">Студія</a></li>
+                    <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                    <li><a href="" class="link">Контакти</a></li>
                 </ul>         
             </nav>
             <!-- Contacts -->
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
             </ul>
         </header>
     <main>
         <!--Hero section-->
         <section>
-                <h1 id="WebStudio"> Ефективні рішення для вашого бізнесу</h1>
+                <h1> Ефективні рішення для вашого бізнесу</h1>
                 <button type="button"> Замовити послугу </button>
         </section>
         <!--Studio-->
         <section>
-            <h2 id="Студія">Особливості</h2>
+            <h2>Особливості</h2>
             <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -53,7 +57,7 @@
         </section>
         <!--Portfolio-->
         <section>
-            <h2 id="Портфоліо">Чим ми займаємося</h2>
+            <h2>Чим ми займаємося</h2>
             <ul>
                 <li><img src="images/websitedevelopment.jpg" alt="Розробка сайтів" width="370"></li>
                 <li><img src="images/mobileversionsdevelopment.jpg" alt="Розробка мобільних версій" width="370"></li>
@@ -71,15 +75,15 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
             <!-- Lolgo -->
-            <a href="#WebStudio">WebStudio</a>
+            <a href="./index.html" class="logo"> <span class="logoweb">Web</span><span class="logostudiofooter">Studio</span> </a>
         <!-- Address -->
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+                <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow" class="adressfooter">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contactsfooter">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="contactsfooter"> +38 096 111 11 11</a></li>
             </ul>
            
         </address>
