--- a/index.html
+++ b/index.html
@@ -29,35 +29,35 @@
         </header>
     <main>
         <!--Hero section-->
-        <section>
-                <h1> Ефективні рішення для вашого бізнесу</h1>
-                <button type="button"> Замовити послугу </button>
+        <section class="herosection">
+                <h1 class="hero"> Ефективні рішення для вашого бізнесу</h1>
+                <button type="button" class="button cursor"> Замовити послугу </button>
         </section>
         <!--Studio-->
         <section>
-            <h2>Особливості</h2>
+            <h2 class="feature">Особливості</h2>
             <ul>
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <h3 class="features">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="text-features">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3 class="features">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="text-features">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3 class="features">ПЛАНУВАННЯ</h3>
+                    <p class="text-features">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <h3 class="features">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="text-features">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
         <!--Portfolio-->
         <section>
-            <h2>Чим ми займаємося</h2>
+            <h2 class="whatwedo">Чим ми займаємося</h2>
             <ul>
                 <li><img src="images/websitedevelopment.jpg" alt="Розробка сайтів" width="370"></li>
                 <li><img src="images/mobileversionsdevelopment.jpg" alt="Розробка мобільних версій" width="370"></li>
@@ -66,12 +66,12 @@
         </section>
         <!--Our team-->
         <section>
-            <h2 id="Контакти">Наша команда</h2>
+            <h2 class="ourteam">Наша команда</h2>
             <ul>
-                <li><img src="images/igor.jpg" alt="Ігор Дем'яненко" width=270> <h3>Ігор Дем'яненко</h3><p>Product Designer</p></li>
-                <li><img src="images/olga.jpg" alt="Ольга Рєпіна" width=270><h3>Ольга Рєпіна</h3><p>Frontend Developer</p></li>
-                <li><img src="images/mikola.jpg" alt="Микола Тарасов" width=270><h3>Микола Тарасов</h3><p>Marketing</p></li>
-                <li><img src="images/mikhailo.jpg" alt="Михайло Єрмаков" width=270><h3>Михайло Єрмаков</h3><p>UI Designer</p></li>
+                <li><img src="images/igor.jpg" alt="Ігор Дем'яненко" width=270> <h3 class="teammembers">Ігор Дем'яненко</h3><p class="positionteam">Product Designer</p></li>
+                <li><img src="images/olga.jpg" alt="Ольга Рєпіна" width=270><h3 class="teammembers">Ольга Рєпіна</h3><p class="positionteam">Frontend Developer</p></li>
+                <li><img src="images/mikola.jpg" alt="Микола Тарасов" width=270><h3 class="teammembers">Микола Тарасов</h3><p class="positionteam">Marketing</p></li>
+                <li><img src="images/mikhailo.jpg" alt="Михайло Єрмаков" width=270><h3 class="teammembers">Михайло Єрмаков</h3><p class="positionteam">UI Designer</p></li>
             </ul>
         </section>
     </main>
@@ -81,9 +81,9 @@
         <!-- Address -->
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow" class="adressfooter">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="contactsfooter">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="contactsfooter"> +38 096 111 11 11</a></li>
+                <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow" class="adressfooter link">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contactsfooter link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="contactsfooter link"> +38 096 111 11 11</a></li>
             </ul>
            
         </address>
