--- a/portfolio.html
+++ b/portfolio.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>WebStudio</title>
 </head>
@@ -33,19 +31,56 @@
         </ul>
     </header>
     <main>
+        <section class="buttons">
+            <ul>
+                <li><button type="button" class="portfolio-button">Усі</button></li>
+                <li><button type="button" class="portfolio-button">Веб-сайти</button></li>
+                <li><button type="button" class="portfolio-button">Додатки</button></li>
+                <li><button type="button" class="portfolio-button">Дизайн</button></li>
+                <li><button type="button" class="portfolio-button">Маркетинг</button></li>
+            </ul>
+            <ul>
+                <li><img src="images/portfolioimg/technocrake.jpg" alt="Технокряк" width=370>
+                    <h2 class="project-name">Технокряк</h2>
+                    <p class="project-description">Веб-сайт</p></li>
+                <li><img src="images/portfolioimg/neworleanvsgoldenstar.jpg" alt="Постер New Orlean vs Golden Star" width=370>
+                    <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                    <p class="project-description">Дизайн</p></li>
+                <li><img src="images/portfolioimg/seafood.jpg" alt="Ресторан Seafood" width=370>
+                    <h2 class="project-name">Ресторан Seafood</h2>
+                    <p class="project-description">Додаток</p></li>
+                <li><img src="images/portfolioimg/prime.jpg" alt="Проєкт Prime" width=370>
+                    <h2 class="project-name">Проєкт Prime</h2>
+                    <p class="project-description">Маркетинг</p></li>
+                <li><img src="images/portfolioimg/boxes.jpg" alt="Проєкт Boxes" width=370>
+                    <h2 class="project-name">Проєкт Boxes</h2>
+                    <p class="project-description">Додаток</p></li>
+                <li><img src="images/portfolioimg/inspirationhasnoborders.jpg" alt="Inspiration has no Borders" width=370>
+                    <h2 class="project-name">Inspiration has no Borders</h2>
+                    <p class="project-description">Веб-сайт</p></li>
+                <li><img src="images/portfolioimg/limitededition.jpg" alt="Видання Limited Edition" width=370>
+                    <h2 class="project-name">Видання Limited Edition</h2>
+                    <p class="project-description">Дизайн</p></li>
+                <li><img src="images/portfolioimg/lab.jpg" alt="Проєкт LAB" width=370>
+                    <h2 class="project-name">Проєкт LAB</h2>
+                    <p class="project-description">Маркетинг</p></li>
+                <li><img src="images/portfolioimg/growingbusines.jpg" alt="Growing Business" width=370>
+                    <h2 class="project-name">Growing Business</h2>
+                    <p class="project-description">Додаток</p>
+                </li></li>
+            </ul>
+        </section>
        
     </main>
     <footer class="footer">
         <!-- Lolgo -->
-        <a href="./index.html" class="logo"> <span class="logoweb">Web</span><span
-                class="logostudiofooter">Studio</span> </a>
+        <a href="./index.html" class="logo"> <span class="logoweb">Web</span><span class="logostudiofooter">Studio</span> </a>
         <!-- Address -->
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow"
-                        class="adressfooter">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="contactsfooter">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="contactsfooter"> +38 096 111 11 11</a></li>
+                <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow" class="adressfooter link">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contactsfooter link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="contactsfooter link"> +38 096 111 11 11</a></li>961111111" class="contactsfooter"> +38 096 111 11 11</a></li>
             </ul>
 
         </address>
