--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
             <ul>
                 <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow" class="adressfooter link">м. Київ, пр-т Лесі Українки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com" class="contactsfooter link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="contactsfooter link"> +38 096 111 11 11</a></li>961111111" class="contactsfooter"> +38 096 111 11 11</a></li>
+                <li><a href="tel:+380961111111" class="contactsfooter link"> +38 096 111 11 11</a></li>
             </ul>
 
         </address>
