--- a/index.html
+++ b/index.html
@@ -10,32 +10,33 @@
         <link rel="stylesheet" href="css/styles.css">
         <title>WebStudio</title>
     </head>
+
     <body>
         <header class="header">
             <nav>
                 <!-- Logo -->
-                <a href="./index.html" class="logo"> <span class="logoweb">Web</span><span class="logostudio">Studio</span> </a>
+                <a href="./index.html" class="logo"><span class="logoweb">Web</span>Studio</a>
                 <ul>
-                    <li><a href="./index.html" class="link">Студія</a></li>
-                    <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-                    <li><a href="" class="link">Контакти</a></li>
+                    <li class="page"></li><a href="./index.html" class="sitenav">Студія</a></li>
+                    <li class="page"></li><a href="./portfolio.html" class="sitenav">Портфоліо</a></li>
+                    <li class="page"><a href="" class="sitenav">Контакти</a></li>
                 </ul>         
             </nav>
             <!-- Contacts -->
             <ul>
-                <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+                <li></li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+                <li></li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
             </ul>
         </header>
     <main>
         <!--Hero section-->
         <section class="herosection">
                 <h1 class="hero"> Ефективні рішення для вашого бізнесу</h1>
-                <button type="button" class="button cursor"> Замовити послугу </button>
+                <button type="button" class="button"> Замовити послугу </button>
         </section>
         <!--Studio-->
         <section>
-            <h2 class="feature">Особливості</h2>
+            <h2 class="feature-header">Особливості</h2>
             <ul>
                 <li>
                     <h3 class="features">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -81,9 +82,9 @@
         <!-- Address -->
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow" class="adressfooter link">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="contactsfooter link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="contactsfooter link"> +38 096 111 11 11</a></li>
+                <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow" class="adressfooter">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contactsfooter">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="contactsfooter"> +38 096 111 11 11</a></li>
             </ul>
            
         </address>
