--- a/portfolio.html
+++ b/portfolio.html
@@ -16,28 +16,28 @@
     <header class="header">
         <nav>
             <!-- Logo -->
-            <a href="./index.html" class="logo"> <span class="logoweb">Web</span><span class="logostudio">Studio</span>
-            </a>
-            <ul>
-                <li><a href="./index.html" class="link">Студія</a></li>
-                <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-                <li><a href="" class="link">Контакти</a></li>
-            </ul>
+            <a href="./index.html" class="logo"><span class="logoweb">Web</span>Studio</a>
+        <ul>
+            <li class="links"><a href="./index.html" class="sitenav">Студія</a></li>
+            <li class="links"><a href="./portfolio.html" class="sitenav">Портфоліо</a></li>
+            <li class="links"><a href="" class="sitenav">Контакти</a></li>
+        </ul>
         </nav>
         <!-- Contacts -->
         <ul>
-            <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+            <li class="links"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+            <li class="links"><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        <section class="buttons">
+        <section class="projects-demonstration">
+        <h1 class="portfolio-header">Портфолио</h1>   
             <ul>
-                <li><button type="button" class="portfolio-button">Усі</button></li>
-                <li><button type="button" class="portfolio-button">Веб-сайти</button></li>
-                <li><button type="button" class="portfolio-button">Додатки</button></li>
-                <li><button type="button" class="portfolio-button">Дизайн</button></li>
-                <li><button type="button" class="portfolio-button">Маркетинг</button></li>
+                <li class="btn"><button type="button" class="portfolio-button">Усі</button></li>
+                <li class="btn"><button type="button" class="portfolio-button">Веб-сайти</button></li>
+                <li class="btn"><button type="button" class="portfolio-button">Додатки</button></li>
+                <li class="btn"><button type="button" class="portfolio-button">Дизайн</button></li>
+                <li class="btn"><button type="button" class="portfolio-button">Маркетинг</button></li>
             </ul>
             <ul>
                 <li><img src="images/portfolioimg/technocrake.jpg" alt="Технокряк" width=370>
@@ -78,9 +78,9 @@
         <!-- Address -->
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow" class="adressfooter link">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="contactsfooter link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="contactsfooter link"> +38 096 111 11 11</a></li>
+                <li><a href="https://goo.gl/maps/2xiJBvrkSo6NXy436" target="_blank" rel="noopener noreferrer nofollow" class="adressfooter">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contactsfooter">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="contactsfooter"> +38 096 111 11 11</a></li>
             </ul>
 
         </address>
