--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="uk">
+
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,11 +17,11 @@
             <nav>
                 <!-- Logo -->
                 <a href="./index.html" class="logo"><span class="logoweb">Web</span>Studio</a>
-                <ul>
-                    <li class="page"></li><a href="./index.html" class="sitenav">Студія</a></li>
-                    <li class="page"></li><a href="./portfolio.html" class="sitenav">Портфоліо</a></li>
-                    <li class="page"><a href="" class="sitenav">Контакти</a></li>
-                </ul>         
+            <ul>
+                <li><a href="./index.html" class="sitenav">Студія</a></li>
+                <li><a href="./portfolio.html" class="sitenav">Портфоліо</a></li>
+                <li><a href="" class="sitenav">Контакти</a></li>
+            </ul>         
             </nav>
             <!-- Contacts -->
             <ul>
