--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,34 +10,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>WebStudio</title>
-</head>
+    </head>
 
-<body>
-    <header class="header">
-        <nav>
-            <!-- Logo -->
-            <a href="./index.html" class="logo"><span class="logoweb">Web</span>Studio</a>
-        <ul>
-            <li class="links"><a href="./index.html" class="sitenav">Студія</a></li>
-            <li class="links"><a href="./portfolio.html" class="sitenav">Портфоліо</a></li>
-            <li class="links"><a href="" class="sitenav">Контакти</a></li>
-        </ul>
-        </nav>
-        <!-- Contacts -->
-        <ul>
-            <li class="links"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-            <li class="links"><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
-        </ul>
-    </header>
+    <body>
+        <header class="header">
+            <nav>
+                <!-- Logo -->
+                <a href="./index.html" class="logo"><span class="logoweb">Web</span>Studio</a>
+            <ul>
+                <li><a href="./index.html" class="sitenav">Студія</a></li>
+                <li><a href="./portfolio.html" class="sitenav">Портфоліо</a></li>
+                <li><a href="" class="sitenav">Контакти</a></li>
+            </ul>
+            </nav>
+            <!-- Contacts -->
+            <ul>
+                <li class="links"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+                <li class="links"><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+            </ul>
+        </header>
     <main>
         <section class="projects-demonstration">
         <h1 class="portfolio-header">Портфолио</h1>   
             <ul>
-                <li class="btn"><button type="button" class="portfolio-button">Усі</button></li>
-                <li class="btn"><button type="button" class="portfolio-button">Веб-сайти</button></li>
-                <li class="btn"><button type="button" class="portfolio-button">Додатки</button></li>
-                <li class="btn"><button type="button" class="portfolio-button">Дизайн</button></li>
-                <li class="btn"><button type="button" class="portfolio-button">Маркетинг</button></li>
+                <li><button type="button" class="portfolio-button">Усі</button></li>
+                <li><button type="button" class="portfolio-button">Веб-сайти</button></li>
+                <li><button type="button" class="portfolio-button">Додатки</button></li>
+                <li><button type="button" class="portfolio-button">Дизайн</button></li>
+                <li><button type="button" class="portfolio-button">Маркетинг</button></li>
             </ul>
             <ul>
                 <li><img src="images/portfolioimg/technocrake.jpg" alt="Технокряк" width=370>
@@ -85,6 +85,6 @@
 
         </address>
     </footer>
-</body>
+    </body>
 
-</html>
+    </html>
