--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <!-- Logo -->
                 <a href="./index.html" class="logo"><span class="logoweb">Web</span>Studio</a>
             <ul>
-                <li><a href="./index.html" class="sitenav">Студія</a></li>
+                <li><a href="./index.html" class="sitenav currenpage">Студія</a></li>
                 <li><a href="./portfolio.html" class="sitenav">Портфоліо</a></li>
                 <li><a href="" class="sitenav">Контакти</a></li>
             </ul>         
