--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </nav>
             <!-- Contacts -->
             <ul>
-                <li></li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-                <li></li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a></li>
             </ul>
         </header>
     <main>
