--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
         <!--Studio-->
         <section>
-            <h2 class="feature-header">Особливості</h2>
+            <h2 class="feature-header visually-hidden">Особливості</h2>
             <ul>
                 <li>
                     <h3 class="features">УВАГА ДО ДЕТАЛЕЙ</h3>
