--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
         </header>
     <main>
         <section class="projects-demonstration">
-        <h1 class="portfolio-header">Портфолио</h1>   
+        <h1 class="portfolio-header visually-hidden">Портфолио</h1>   
             <ul>
                 <li><button type="button" class="portfolio-button">Усі</button></li>
                 <li><button type="button" class="portfolio-button">Веб-сайти</button></li>
